# hakyll-purescript

./: hakyll-purescript.cabal
src/Hakyll/Web/: PureScript.hs
