name: hakyll-purescript
version: 0.1.0
synopsis: Hakyll Purescript compiler
license: MIT
license-file: LICENSE
homepage: https://github.com/meoblast001/hakyll-purescript
author: Braden Walters
maintainer: vc@braden-walters.info
category: Web
build-type: Simple
cabal-version: >= 1.10

description: Hakyll compiler which converts PureScript to JavaScript.

library
  exposed-modules: Hakyll.Web.PureScript
  build-depends:
      base >= 4 && < 5
    , hakyll >= 4.7.0
    , purescript >= 0.7
    , containers >= 0.5.5 && < 0.6
    , filepath >= 1.3.0 && < 1.5.0
    , directory >= 1.2.5 && < 1.3
    , monads-tf >= 0.1.0 && < 0.1.1
    , text >= 1.2.2 && < 1.3
  hs-source-dirs: src
  default-language: Haskell2010
